Able to accept Cumulative Fieldsets