@@ -18,6 +18,8 @@ import java.util.Set;
  * </p>
  */
 public final class MappingContext {
+    public static final String FIELDSET_DEFAULT = "DEFAULT";
+    public static final String FIELDSET_FULL = "FULL";
     private final String fieldSetName;
     private final boolean mapNulls;
     private final String fieldPrefix;
@@ -29,7 +31,7 @@ public final class MappingContext {
         this.mapNulls = b.mapNulls;
         this.fieldPrefix = b.fieldPrefix;
         this.resolvedFields = b.resolvedFields;
-        this.extras = Map.copyOf(b.extras);
+        this.extras = Collections.unmodifiableMap(new HashMap<>(b.extras));
     }
 
     // -------------------------------------------------------------------------
@@ -83,18 +85,18 @@ public final class MappingContext {
      * Convenience: DEFAULT field set, no null mapping.
      */
     public static MappingContext defaults() {
-        return builder().fieldSetName("DEFAULT").build();
+        return builder().fieldSetName(FIELDSET_DEFAULT).build();
     }
 
     /**
      * Convenience: FULL field set, map nulls.
      */
     public static MappingContext full() {
-        return builder().fieldSetName("FULL").mapNulls(true).build();
+        return builder().fieldSetName(FIELDSET_FULL).mapNulls(true).build();
     }
 
     public static final class Builder {
-        private String fieldSetName = "DEFAULT";
+        private String fieldSetName = FIELDSET_DEFAULT;
         private boolean mapNulls = false;
         private String fieldPrefix = "";
         private Set<String> resolvedFields = Collections.emptySet();
